Updated markdown comments

--- a/mnist.ipynb
+++ b/mnist.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Imports"
+    "# Imports"
    ],
    "metadata": {
     "collapsed": false,
@@ -29,7 +29,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Loading dataset and turning ints into floats for better performace"
+    "# Loading dataset and turning ints into floats for better performace"
    ],
    "metadata": {
     "collapsed": false,
@@ -58,7 +58,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Creating model"
+    "# Creating model"
    ],
    "metadata": {
     "collapsed": false,
@@ -90,7 +90,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Making predictions and turning them into probability"
+    "# Making predictions and turning them into probability"
    ],
    "metadata": {
     "collapsed": false,
@@ -149,7 +149,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Creating loss function"
+    "# Creating loss function"
    ],
    "metadata": {
     "collapsed": false,
@@ -198,7 +198,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Adding optimizer, loss function and accuracy as metrics to the model"
+    "# Adding optimizer, loss function and accuracy as metrics to the model"
    ],
    "metadata": {
     "collapsed": false,
@@ -224,7 +224,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Training the model"
+    "# Training the model"
    ],
    "metadata": {
     "collapsed": false,
@@ -285,7 +285,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Evaluating trained model to test data"
+    "# Evaluating trained model to test data"
    ],
    "metadata": {
     "collapsed": false,
