Upgraded accuracy from 98,24% to 98,29%.

--- a/mnist.ipynb
+++ b/mnist.ipynb
@@ -69,15 +69,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 90,
    "outputs": [],
    "source": [
     "model = tf.keras.models.Sequential([\n",
     "    tf.keras.layers.Flatten(input_shape=(28,28)),\n",
     "    tf.keras.layers.Dense(256, activation='relu'),\n",
     "    tf.keras.layers.Dense(128, activation='relu'),\n",
-    "    tf.keras.layers.Dense(64, activation='sigmoid'),\n",
-    "    tf.keras.layers.Dense(10, activation='softmax', kernel_regularizer=\"l1_l2\")\n",
+    "    tf.keras.layers.Dense(64, activation='relu'),\n",
+    "    tf.keras.layers.Dense(10, activation='softmax', kernel_regularizer=\"l2\")\n",
     "])"
    ],
    "metadata": {
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 91,
    "outputs": [],
    "source": [
     "model.compile(optimizer='rmsprop', loss=loss_fn, metrics=['accuracy'])"
@@ -235,39 +235,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 92,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "1875/1875 [==============================] - 16s 8ms/step - loss: 1.1225 - accuracy: 0.9266\n",
+      "1875/1875 [==============================] - 15s 8ms/step - loss: 0.2897 - accuracy: 0.9347\n",
       "Epoch 2/10\n",
-      "1875/1875 [==============================] - 15s 8ms/step - loss: 0.9219 - accuracy: 0.9685\n",
+      "1875/1875 [==============================] - 15s 8ms/step - loss: 0.1218 - accuracy: 0.9705\n",
       "Epoch 3/10\n",
-      "1875/1875 [==============================] - 15s 8ms/step - loss: 0.8939 - accuracy: 0.9779\n",
+      "1875/1875 [==============================] - 15s 8ms/step - loss: 0.0867 - accuracy: 0.9790\n",
       "Epoch 4/10\n",
-      "1875/1875 [==============================] - 15s 8ms/step - loss: 0.8787 - accuracy: 0.9827\n",
+      "1875/1875 [==============================] - 15s 8ms/step - loss: 0.0695 - accuracy: 0.9827\n",
       "Epoch 5/10\n",
-      "1875/1875 [==============================] - 15s 8ms/step - loss: 0.8697 - accuracy: 0.9857\n",
+      "1875/1875 [==============================] - 15s 8ms/step - loss: 0.0573 - accuracy: 0.9859\n",
       "Epoch 6/10\n",
-      "1875/1875 [==============================] - 15s 8ms/step - loss: 0.8630 - accuracy: 0.9883\n",
+      "1875/1875 [==============================] - 15s 8ms/step - loss: 0.0475 - accuracy: 0.9881\n",
       "Epoch 7/10\n",
-      "1875/1875 [==============================] - 15s 8ms/step - loss: 0.8580 - accuracy: 0.9901\n",
+      "1875/1875 [==============================] - 15s 8ms/step - loss: 0.0408 - accuracy: 0.9899\n",
       "Epoch 8/10\n",
-      "1875/1875 [==============================] - 15s 8ms/step - loss: 0.8547 - accuracy: 0.9913\n",
+      "1875/1875 [==============================] - 15s 8ms/step - loss: 0.0362 - accuracy: 0.9909\n",
       "Epoch 9/10\n",
-      "1875/1875 [==============================] - 15s 8ms/step - loss: 0.8510 - accuracy: 0.9924\n",
+      "1875/1875 [==============================] - 15s 8ms/step - loss: 0.0302 - accuracy: 0.9928\n",
       "Epoch 10/10\n",
-      "1875/1875 [==============================] - 15s 8ms/step - loss: 0.8492 - accuracy: 0.9932\n"
+      "1875/1875 [==============================] - 15s 8ms/step - loss: 0.0272 - accuracy: 0.9936\n"
      ]
     },
     {
      "data": {
-      "text/plain": "<keras.callbacks.History at 0x1cd243126e0>"
+      "text/plain": "<keras.callbacks.History at 0x1cd21e72fe0>"
      },
-     "execution_count": 67,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,20 +296,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 93,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "313/313 - 1s - loss: 0.8827 - accuracy: 0.9824 - 1s/epoch - 4ms/step\n"
+      "313/313 - 1s - loss: 0.0813 - accuracy: 0.9829 - 1s/epoch - 4ms/step\n"
      ]
     },
     {
      "data": {
-      "text/plain": "[0.8826569318771362, 0.9824000000953674]"
+      "text/plain": "[0.08126514405012131, 0.9829000234603882]"
      },
-     "execution_count": 68,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
