--- a/mnist.ipynb
+++ b/mnist.ipynb
@@ -199,7 +199,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Adding optimizer, loss function and accuracy as metrics to the model"
+    "# Adding optimizer, loss function and metrics to the model"
    ],
    "metadata": {
     "collapsed": false,
