Boosted accuracy to 99,41%.

--- a/mnist.ipynb
+++ b/mnist.ipynb
@@ -133,6 +133,58 @@
    }
   },
   {
+   "cell_type": "code",
+   "execution_count": 246,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_57\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " conv2d_17 (Conv2D)          (None, 26, 26, 64)        640       \n",
+      "                                                                 \n",
+      " max_pooling2d_17 (MaxPoolin  (None, 13, 13, 64)       0         \n",
+      " g2D)                                                            \n",
+      "                                                                 \n",
+      " batch_normalization_27 (Bat  (None, 13, 13, 64)       256       \n",
+      " chNormalization)                                                \n",
+      "                                                                 \n",
+      " conv2d_18 (Conv2D)          (None, 11, 11, 128)       73856     \n",
+      "                                                                 \n",
+      " max_pooling2d_18 (MaxPoolin  (None, 5, 5, 128)        0         \n",
+      " g2D)                                                            \n",
+      "                                                                 \n",
+      " batch_normalization_28 (Bat  (None, 5, 5, 128)        512       \n",
+      " chNormalization)                                                \n",
+      "                                                                 \n",
+      " flatten_59 (Flatten)        (None, 3200)              0         \n",
+      "                                                                 \n",
+      " dropout_13 (Dropout)        (None, 3200)              0         \n",
+      "                                                                 \n",
+      " dense_206 (Dense)           (None, 10)                32010     \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 107,274\n",
+      "Trainable params: 106,890\n",
+      "Non-trainable params: 384\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.summary()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
    "cell_type": "markdown",
    "source": [
     "# Making predictions and turning them into probability"
